<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_handling"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_android"
        android:textColor="@color/bright_green"
        android:textSize="30sp"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="223dp"
        android:layout_height="223dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/image"
        android:scaleType="fitCenter"
        android:background="@null"
        android:layout_below="@id/textView2"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/small_font" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/large_font" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/hello_world"
        android:textSize="25sp" />

</RelativeLayout>